--- a/trust-lawyer-website/stylesheet/style.css
+++ b/trust-lawyer-website/stylesheet/style.css
@@ -216,9 +216,9 @@ ul, ol {
 
 img {
     max-width: 100%;
-    height: 405px;
+    height:auto;
     object-fit: cover;
-    background-position: top;  
+    /* background-position: top;   */
 
 }
 
@@ -2084,6 +2084,12 @@ input::-webkit-input-placeholder {
     width: 100%;
     align-items: center;
 }
+
+.attorneys .attorneys-info img{
+    height: 405px;
+    background-position: top;
+}
+
 .mg-attorneys-home {
     margin-bottom: 30px;
 }
@@ -2801,7 +2807,7 @@ input::-webkit-input-placeholder {
     display: inline-block;
     color: #fff;
     background-color: #cca776;
-    padding: 10px 37px;
+    padding: 10px 36px;
     text-transform: uppercase;
 }
 .about-style1 {
